force-app/main/default/objects/WIN_Company_Types__c/WIN_Company_Types__c.object-meta.xml
<CustomObject>
    <label>WIN Company Types</label>
    <nameField>
        <displayFormat>WT {YYYY} - {00000}</displayFormat>
        <label>WIN Company Types Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WIN Company Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>