force-app/main/default/objects/WIN_Company_Types__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>This field shows the type of company and it updates from Win system.</description>
    <label>Company Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>