force-app/main/default/objects/WIN_Company_Types__c/fields/Company_Type_Key__c.field-meta.xml
<CustomField>
    <fullName>Company_Type_Key__c</fullName>
    <description>This the combination of Account Win id and Type.</description>
    <externalId>true</externalId>
    <label>Company Type Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>