force-app/main/default/objects/WIN_Company_Types__c/fields/Expiration_Reason__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Reason__c</fullName>
    <label>Expiration Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>