force-app/main/default/objects/WIN_Company_Types__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName> 
    <formula>IF(
    ISNULL(Expiration_Date__c),
    &quot;Active&quot;,
    IF(
        Expiration_Date__c &gt; TODAY(),
        &quot;Active&quot;,
        &quot;Inactive&quot;
    )
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>