force-app/main/default/objects/WIN_Company_Types__c/fields/Win_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Win_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Win Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WIN_Company_Types</relationshipName>
    <type>Lookup</type>
</CustomField>