force-app/main/default/objects/WIN_Company_Types__c/fields/Win_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Win_Last_Modified_Date__c</fullName>
    <label>Win Last Modified Date</label>
    <type>Date</type>
</CustomField>